# cpp_skeleton

./: .dockerignore  CMakeLists.txt  CPPLINT.cfg  Dockerfile  Makefile  README.md  conan_debug  conan_debug_apple  conan_release  conan_release_apple  conan_release_intel  conanfile.txt  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  cmake-multi-platform.yml  cmake.yml
cmake/: testing.cmake
docker/rocky/: Dockerfile
docker/ubuntu/: Dockerfile
src/: Writer.cpp  Writer.h  logger.h
tests/: CMakeLists.txt  example_test.cpp
